unpackaged/objects/Employee__c.object
<CustomObject>
    <fields>
        <fullName>BirthDate__c</fullName>
        <label>Birth Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CareerCounselor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Career Counselor</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The selected employee isn&apos;t a Career Counselor. Please select a valid Career Counselor.</errorMessage>
            <filterItems>
                <field>Employee__c.IsCareerCounselor__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Counselees</relationshipLabel>
        <relationshipName>CareerCounselor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Childrens__c</fullName>
        <label>Children</label>
        <summaryFilterItems>
            <field>DependentPerson__c.Relationship__c</field>
            <operation>equals</operation>
            <value>Child</value>
        </summaryFilterItems>
        <summaryForeignKey>DependentPerson__c.Employee__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <formula>IMAGE(&quot;/servlet/servlet.FileDownload?file=0154E000000D9JO&quot;, &quot;SpringFive&quot;,90,220)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CountryEmployees__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Country</relationshipLabel>
        <relationshipName>Employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DependentPersons__c</fullName>
        <label>Dependent persons</label>
        <summaryForeignKey>DependentPerson__c.Employee__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DriverLicense__c</fullName>
        <inlineHelpText>Multi Pick List.</inlineHelpText>
        <label>Driver&apos;s license</label>
        <picklist>
            <picklistValues>
                <fullName>A1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ED</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EmployeeID__c</fullName>
        <displayFormat>SF-{000000}</displayFormat>
        <label>Employee ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>First Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Grade__c</fullName>
        <label>Grade</label>
        <picklist>
            <picklistValues>
                <fullName>Trainee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Junior Consultant</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managing Director</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IsCareerCounselor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Career Counselor?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsManagerHR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Manager (HR)?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastMedicalVisitDate__c</fullName>
        <description>Date of the last medical visit of the employee.</description>
        <label>Last Medical Visit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>Last Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastPromotionDate__c</fullName>
        <label>Last Promotion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MaidenName__c</fullName>
        <label>Maiden Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ManagerHR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Manager from an HR standpoint.</description>
        <label>Manager (HR)</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The selected employee isn&apos;t a Manager (HR). Please select a valid Manager (HR).</errorMessage>
            <filterItems>
                <field>Employee__c.IsManagerHR__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Managed Employees</relationshipLabel>
        <relationshipName>Employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MaritalStatus__c</fullName>
        <label>Marital Status</label>
        <picklist>
            <picklistValues>
                <fullName>Divorced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Married</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Widowed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MiddleName__c</fullName>
        <label>Middle Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherDependentPersons__c</fullName>
        <label>Other dependent persons</label>
        <summaryFilterItems>
            <field>DependentPerson__c.Relationship__c</field>
            <operation>equals</operation>
            <value>Parent, Tutor</value>
        </summaryFilterItems>
        <summaryForeignKey>DependentPerson__c.Employee__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Partners__c</fullName>
        <description>Dependent persons : Partner , Civil union , Domesitic partnership , Wife/Husband.</description>
        <label>Partners</label>
        <summaryFilterItems>
            <field>DependentPerson__c.Relationship__c</field>
            <operation>equals</operation>
            <value>Partner, Civil union, Domestic partnership, Wife/Husband</value>
        </summaryFilterItems>
        <summaryForeignKey>DependentPerson__c.Employee__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PersonalMobilePhone__c</fullName>
        <label>Personal Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PersonalPhone__c</fullName>
        <label>Personal Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Photo__c</fullName>
        <formula>IF (ISBLANK(Picture__c),IF (ISPICKVAL( Salutation__c ,&quot;Ms.&quot;)  || ISPICKVAL(Salutation__c,&quot;Mrs.&quot;) ,IMAGE(&quot;http://www.since1926.fr/wp-content/uploads/2013/03/perfect-profile.png&quot;   , &quot; Profile picture &quot; , 140,140 )  , IMAGE(&quot;http://philosophy.ucr.edu/wp-content/uploads/2014/10/no-profile-img.gif&quot; , &quot; Profile picture &quot; , 140,140 ) ) ,IMAGE(Picture__c, &quot;Photo unavailable&quot; , 140, 140))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Photo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Picture__c</fullName>
        <description>URL pointing to an image .</description>
        <inlineHelpText>You can use an image stored online by getting its image URL (web address).</inlineHelpText>
        <label>Picture</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SalesforceUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Salesforce User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Salutation__c</fullName>
        <label>Salutation</label>
        <picklist>
            <picklistValues>
                <fullName>Mr.</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Ms.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mrs.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prof.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SocialSecurityNumber__c</fullName>
        <description>The INSEE code is a 15-digit number containing only numeric characters, and no whitespace, punctuation, or alpha characters.</description>
        <inlineHelpText>The INSEE code is a 15-digit number containing only numeric characters, and no whitespace, punctuation, or alpha characters.</inlineHelpText>
        <label>Social Security Number</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>State</label>
        <referenceTo>State__c</referenceTo>
        <relationshipLabel>Employees</relationshipLabel>
        <relationshipName>Employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Thumbnail__c</fullName>
        <formula>IF (ISBLANK(Picture__c),IF (ISPICKVAL( Salutation__c ,&quot;Ms.&quot;)  || ISPICKVAL(Salutation__c,&quot;Mrs.&quot;) ,IMAGE(&quot;http://www.since1926.fr/wp-content/uploads/2013/03/perfect-profile.png&quot;   , &quot; Profile picture &quot; , 50,50 )  , IMAGE(&quot;http://philosophy.ucr.edu/wp-content/uploads/2014/10/no-profile-img.gif&quot; , &quot; Profile picture &quot; , 50,50 ) ) ,IMAGE(Picture__c, &quot;Photo unavailable&quot; , 50, 50))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Thumbnail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkMobilePhone__c</fullName>
        <label>Work Mobile phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>WorkPhone__c</fullName>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ZipCode__c</fullName>
        <label>Zip Code</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Collaborator</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Thumbnail__c</columns>
        <columns>BirthDate__c</columns>
        <columns>FirstName__c</columns>
        <columns>LastName__c</columns>
        <columns>WorkMobilePhone__c</columns>
        <columns>SalesforceUser__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Employee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Collaborators</pluralLabel>
    <recordTypes>
        <fullName>Employee</fullName>
        <active>true</active>
        <label>Employee</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>BirthDateConsistency</fullName>
        <active>true</active>
        <description>Verify that BirthDate &lt; Today().</description>
        <errorConditionFormula>AND(BirthDate__c &gt; Today(),(NOT( $User.BypassVR__c )))</errorConditionFormula>
        <errorMessage>Please check Birth date . Birth date is superior to today date .</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EmployeePhone</fullName>
        <active>true</active>
        <description>At least one of the four phone numbers fields &lt;Contacts details&gt;  should be informed .</description>
        <errorConditionFormula>AND(ISBLANK(WorkMobilePhone__c),ISBLANK(WorkPhone__c) ,ISBLANK(PersonalMobilePhone__c),ISBLANK(PersonalPhone__c),(NOT( $User.BypassVR__c )))</errorConditionFormula>
        <errorMessage>At least one of the four phone numbers fields &lt;Contacts details&gt;  should be informed .</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PartnersNumber</fullName>
        <active>true</active>
        <description>The count of Partners shouldn&apos;t exceed 1 .</description>
        <errorConditionFormula>AND(Partners__c &gt; 1,(NOT( $User.BypassVR__c )))</errorConditionFormula>
        <errorMessage>An employee can&apos;t have more than a partner. (Partner, Civil union, Domestic partnership, Wife/Husband)</errorMessage>
    </validationRules>
</CustomObject>